# TraitQuest

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: .coverage  .env.example  README.md  apply_migrations.py  debug_middleware.py  generate_seed.py  pyproject.toml  seed_test_user.py  test_session.py
backend/app/: main.py
backend/app/agents/: analytics.py  copilot_analytics.py  copilot_questionnaire.py  copilot_summary.py  copilot_transformation.py  orchestrator.py  questionnaire.py  summary.py  transformation.py  validator.py
backend/app/api/: auth.py  map.py  quest.py  quest_utils.py  quest_ws.py  quest_ws_handlers.py  quest_ws_utils.py
backend/app/core/: agent.py  calculators.py  config.py  copilot_client.py  copilot_logging.py  logging_config.py  redis_client.py  security.py  session.py  tools.py
backend/app/db/: models.py  session.py
backend/app/models/: quest.py  schemas.py
backend/app/services/: cache_service.py  email_service.py  game_assets.py  level_system.py
backend/app/templates/: welcome_email.html
backend/migrations/: 001_initial_schema.sql  002_seed_game_definitions.sql  003_rename_summary_to_hero_chronicle.sql  004_add_email_column.sql  add_hero_avatar_columns.sql  remove_avatar_url_column.sql
backend/scripts/: test_force_provider.py  test_litellm.py  test_prefix_stripping.py  test_welcome_email.py
backend/tests/: conftest.py  test_agent_parsing.py  test_query_performance.py  test_session_debug.py
backend/tests/agents/: test_analytics.py  test_transformation.py  test_validator.py
backend/tests/api/: test_map.py  test_quest_endpoints.py  test_quest_ws.py  test_request_result.py
backend/tests/core/: test_hero_transformation.py  test_psychological_calculator.py  test_psychological_calculator_extra.py
backend/tests/integration/: test_quest_integration.py
backend/tests/mocks/: copilot_mock.py  session_mock.py
(+133 files in other folders)
