[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.127.0",
    "google-adk>=1.18.0",
    "google-auth>=2.0.0",
    "litellm>=1.0.0",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn>=0.40.0",
    "redis>=5.0.0",
]
