[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.127.0",
    "github-copilot-sdk @ git+https://github.com/github/copilot-sdk.git#subdirectory=python",
    "google-auth>=2.40.0",
    "google-generativeai>=0.8.4",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn>=0.40.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "websockets>=16.0",
]
